exports[`invalid(1): {\"dependencies\": {\"a\": \"1.0.0\"}, \"devDependencies\": {\"a\": \"1.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {"a": "1.0.0"}}

`;

exports[`invalid(1): {\"dependencies\": {\"a\": \"1.0.0\"}, \"devDependencies\": {\"a\": \"1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {"a": "1.0.0"}}
    |                                                      ^^^ \`a\` is already listed in \`dependencies\`.

Output:
  1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {}}

`;

exports[`invalid(2): {\"dependencies\": {\"a\": \"1.0.0\"}, \"optionalDependencies\": {\"a\": \"1.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"a": "1.0.0"}, "optionalDependencies": {"a": "1.0.0"}}

`;

exports[`invalid(2): {\"dependencies\": {\"a\": \"1.0.0\"}, \"optionalDependencies\": {\"a\": \"1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"a": "1.0.0"}, "optionalDependencies": {"a": "1.0.0"}}
    |                                                           ^^^ \`a\` is already listed in \`dependencies\`.

Output:
  1 | {"dependencies": {"a": "1.0.0"}, "optionalDependencies": {}}

`;

exports[`invalid(3): {\"dependencies\": {\"a\": \"1.0.0\", \"b\": \"1.0.0\"}, \"devDependencies\": {\"b\": \"2.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"a": "1.0.0", "b": "1.0.0"}, "devDependencies": {"b": "2.0.0"}}

`;

exports[`invalid(3): {\"dependencies\": {\"a\": \"1.0.0\", \"b\": \"1.0.0\"}, \"devDependencies\": {\"b\": \"2.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"a": "1.0.0", "b": "1.0.0"}, "devDependencies": {"b": "2.0.0"}}
    |                                                                    ^^^ \`b\` is already listed in \`dependencies\`.

Output:
  1 | {"dependencies": {"a": "1.0.0", "b": "1.0.0"}, "devDependencies": {}}

`;

exports[`invalid(4): {\"dependencies\": {\"a\": \"1.0.0\"}, \"devDependencies\": {\"a\": \"1.0.0\"}, \"optionalDependencies\": {\"a\": \"1.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {"a": "1.0.0"}, "optionalDependencies": {"a": "1.0.0"}}

`;

exports[`invalid(4): {\"dependencies\": {\"a\": \"1.0.0\"}, \"devDependencies\": {\"a\": \"1.0.0\"}, \"optionalDependencies\": {\"a\": \"1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {"a": "1.0.0"}, "optionalDependencies": {"a": "1.0.0"}}
    |                                                      ^^^ \`a\` is already listed in \`dependencies\`.

Output:
  1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {}, "optionalDependencies": {"a": "1.0.0"}}

`;

exports[`invalid(4): {\"dependencies\": {\"a\": \"1.0.0\"}, \"devDependencies\": {\"a\": \"1.0.0\"}, \"optionalDependencies\": {\"a\": \"1.0.0\"}} 3`] = `

Message:
> 1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {"a": "1.0.0"}, "optionalDependencies": {"a": "1.0.0"}}
    |                                                                                              ^^^ \`a\` is already listed in \`dependencies\`.

Output:
  1 | {"dependencies": {"a": "1.0.0"}, "devDependencies": {"a": "1.0.0"}, "optionalDependencies": {}}

`;
